--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "serve": "cross-env NODE_ENV=develop vue-cli-service serve",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "uat": "cross-env NODE_ENV=uat vue-cli-service build",
+    "build-prod": "cross-env NODE_ENV=production vue-cli-service build",
+    "build-uat": "cross-env NODE_ENV=uat vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "normalize-scss": "^7.0.1",
     "vue": "^2.6.10",
